# katas

./: .gitignore  README.md
benchmarking/: CMakeLists.txt  CMakeSettings.json  benchmark.cpp  conanfile.txt  description.md
benchmarking/solution1/: CMakeLists.txt  solution.hpp
benchmarking/solution2/: CMakeLists.txt  solution.hpp
benchmarking/solution3/: CMakeLists.txt  solution.hpp
benchmarking/solution4/: CMakeLists.txt  solution.hpp
buy_stocks/: .clang-format  CMakeLists.txt  CMakeSettings.json  calculate_max_profit.hpp  calculate_max_profit_tests.cpp  conanfile.txt  description.md  verification.cpp
introductions/dynamic_programming/: slides.md
roman_numbers/: description.md
roman_numbers/cpp/: CMakeLists.txt  roman_numbers.cpp  roman_numbers.hpp  roman_numbers_tests.cpp  roman_numbers_verification.cpp
roman_numbers/python/: example.txt  roman_numbers.py  test_convert_to_roman.py
single_number/: CMakeLists.txt  conanfile.txt  description.md  single_number.cpp  single_number.hpp  single_number_benchmark.cpp  single_number_tests.cpp  single_number_verification.cpp
tennis/: CMakeLists.txt  conanfile.txt  tennis.hpp  tennis_verification.cpp
